--- a/APIs/Kaddis.Framework.APIs.Resources/packages.config
+++ b/APIs/Kaddis.Framework.APIs.Resources/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net471" />
